Fixed dark text on dark mode

--- a/src/styles/theme-tags.module.scss
+++ b/src/styles/theme-tags.module.scss
@@ -752,9 +752,13 @@
 
 .helpContainer {
     position: fixed;
-    right: 1.5rem;
-    bottom: 1.5rem;
-    z-index: 4;
+    right: 1rem;
+    bottom: 2.5rem;
+    z-index: 100;
+    @media (min-width: 850px) {
+        right: 1.5rem;
+        bottom: 1rem;
+    }
     .btn {
         display: block;
         width: 2.5rem;
@@ -765,10 +769,10 @@
         line-height: 2.5rem;
         border-radius: 50%;
         transition: all linear 250ms;
-        box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.5);
+        box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 3px -2px #ffffff;
         font-size: 1.3rem;
         &:hover {
-            box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.4);
+            box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.4), inset 0px 2px 3px -2px #ffffff;
             background-color: darken($siteColor, 7%);
         }
     }
@@ -821,10 +825,7 @@ html[class*="dark"], html[id*="dark"] {
                             color: rgba(255, 255, 255, 0.9);
                         }
                     }
-                    .description {
-                        color: #b9bbbe;
-                    }
-                    .descriptionAlt {
+                    .description, .descriptionAlt {
                         color: #b9bbbe;
                     }
                     .tagContainer {
