--- a/src/styles/themes.module.scss
+++ b/src/styles/themes.module.scss
@@ -720,7 +720,7 @@
     position: fixed;
     right: 1rem;
     bottom: 2.5rem;
-    z-index: 4;
+    z-index: 100;
     @media (min-width: 850px) {
         right: 1.5rem;
         bottom: 1rem;
@@ -735,10 +735,10 @@
         line-height: 2.5rem;
         border-radius: 50%;
         transition: all linear 250ms;
-        box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.5);
+        box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 3px -2px #ffffff;
         font-size: 1.3rem;
         &:hover {
-            box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.4);
+            box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.4), inset 0px 2px 3px -2px #ffffff;
             background-color: darken($siteColor, 7%);
         }
     }
@@ -827,7 +827,7 @@ html[class*="dark"], html[id*="dark"] {
                             color: rgba(255, 255, 255, 0.9);
                         }
                     }
-                    .description {
+                    .description, .descriptionAlt {
                         color: #b9bbbe;
                     }
                     .tagContainer {
